# monster_math

./: .gitignore  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: animations.css  base.css  typography.css
src/components/canvas/: CombatCanvas.vue
src/components/cards/: BasicMonsterCard.vue  CheckboxRow.vue  DamageInput.vue  DeadMonsterCard.vue  DrawSteelBasicCard.vue  DrawSteelSquadCard.vue  EliteMonsterCard.vue  MonsterCard.vue
src/components/layout/: AppHeader.vue  DeadPile.vue  DrawSteelHeroBar.vue  LairActionBar.vue  MaliceTracker.vue  RoundTracker.vue
src/components/modals/: AddMonsterModal.vue  DeadPileModal.vue  DrawSteelSetupModal.vue  EndCombatModal.vue  PlayerManagerModal.vue  SettingsModal.vue  ShortcutsModal.vue
src/components/shared/: IconButton.vue  NumberInput.vue
src/rulesets/: index.ts
src/rulesets/dnd5e/: index.ts
src/rulesets/drawsteel/: index.ts
src/stores/: combat.ts  settings.ts  ui.ts
src/types/: combat.ts  monster.ts  ruleset.ts
